lang/macro/tests/ui/fail/S-05-storage-as-event.stderr
error: invalid ink! attribute found for `#[ink(storage)]` struct
 --> $DIR/S-05-storage-as-event.rs:6:10
  |
6 |     #[ink(event)] // We cannot have #[ink(event)] if we already have #[ink(storage)]
  |          ^^^^^^^
